<resources>
    <string name="app_name">Lendvest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="borrowers">Borrowers</string>
    <string name="account">Account</string>
    <string name="info_and_action"><![CDATA[Information & Action]]></string>
    <string name="info_feedback"><![CDATA[Information & Feedback]]></string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="welcome_to_lendvest">Welcome to Lenvest!</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_password_repeat">Repeat password</string>
    <string name="button_label_create_account">CREATE ACCOUNT</string>

    <string name="button_label_login">LOGIN</string>
    <string name="button_label_signup">SIGN UP</string>
    <string name="overview">Overview</string>
    <string name="investment">Investment</string>
    <string name="loans">Loans</string>
    <string name="analytics">Analytics</string>
    <string name="text_active">Active</string>
    <string name="text_completed">Completed</string>
    <string name="text_lost">Lost</string>
    <string name="text_request_loan">Request loan</string>
    <string name="tap_screen">Tap screen</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="text_reason">Reason</string>
    <string name="logout">Sign out</string>
    <string name="hotlist">Notifications</string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="notification">Notification</string>
    <string name="label_custom_color">Custom color</string>
    <string name="label_new_loan">New loan</string>
    <string name="label_signature_pad_agreement">I agree to the terms and conditions.</string>
    <string name="label_clear">Clear</string>
    <string name="labe_save">Save</string>

</resources>
