<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@mipmap/ic_launcher_round"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />'

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome_to_lendvest"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_button_welcome_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/button_label_login"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/material_button_welcome_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/button_label_signup"/>

    </LinearLayout>

</FrameLayout>