<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/buttons_container"
            android:id="@+id/signature_pad_container">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginBottom="8dp"
                android:layout_above="@+id/textview_signature_pad_description" />

            <TextView
                android:id="@+id/textview_signature_pad_description"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="16dp"
                android:layout_alignParentBottom="true"
                android:text="@string/label_signature_pad_agreement" />

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/signature_pad"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/button_signature_pad_clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"
                android:layout_height="wrap_content"
                android:text="@string/label_clear"
                android:backgroundTint="@color/colorAccent"/>

            <Button
                android:id="@+id/button_signature_pad_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:layout_height="wrap_content"
                android:text="@string/labe_save"
                android:backgroundTint="@color/colorAccent"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>